# dynet-rs

./: .gitignore  Cargo.toml  README.md
dynet-sys/: Cargo.toml  README.md  build.rs  wrapper.h
examples/: autobatch.rs  lookup_params.rs  rnnlm.rs  x_or_batch.rs
src/: dim.rs  graph.rs  init.rs  lib.rs  ops.rs  param_init.rs  trainer.rs
tests/: parameter_collection.rs
